# yao

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  README.md  pyproject.toml  readthedocs.yml
.github/workflows/: linting.yml  release.yml  test.yml
docs/notes/: sp2_notes.md
docs/sphinx/: api.rst  commands.rst  conf.py  index.rst  intro.rst  requirements.txt
python/yao/: __main__.py  exceptions.py
tests/: test_main.py
yao/: __init__.py  __main__.py  actor.py  alerts.py  commands.py  controller.py  delegate.py  exceptions.py  mech_commands.py  mech_controller.py
yao/etc/: BOSS_extra.acf  BOSS_extra_purge.acf  BOSS_extra_purge_erase_v2.acf  BOSS_extra_purge_erase_v3.acf  BOSS_extra_purge_erase_v4.acf  BOSS_extra_purge_erase_v5.acf  BOSS_extra_purge_erase_v6.acf  BOSS_extra_purge_erase_v8.acf  README.md  schema.json  yao.yml
