[project]
name = "sdss-yao"
version = "1.3.5"
description = "BOSS spectrograph actor that uses an STA Archon controller"
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" },
    { name = "Aidan Gray", email = "aidan.gray@idg.jhu.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"

requires-python = ">=3.10,<4"

dependencies = [
    "sdss-archon>=0.15.5"
]

[project.urls]
Homepage = "https://github.com/sdss/yao"
Repository = "https://github.com/sdss/yao"
Documentation = "https://sdss-yao.readthedocs.org"

[project.scripts]
yao = "yao.__main__:yao"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "Sphinx>=3.0.0",
    "sphinx-click>=2.6.0",
    "sphinx-jsonschema>=1.16.7",
    "myst-parser>=0.14.0",
    "furo>=2021.6.18-beta.36",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.3.3",
    "ruff>=0.1.0"
]

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = ["typings/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["hal"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "archon", "clu"]

[tool.pytest.ini_options]
addopts = "--cov yao --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["yao/*"]
omit = [
    "*/__init__.py",
    "yao/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["yao"]

[tool.hatch.build.targets.wheel]
packages = ["yao"]
